@@ -5,6 +5,8 @@ Version 0.1.3
 - use mkstemp() to create temporary files if available
 - lock output files so that it is possible to run multiple instances of
   bakefile on same tree
+- added -j flag to bakefile_gen for simultaneous execution of more bakefile
+  instances on multiprocessor systems
 
 
 Version 0.1.2
